# CompareHosts

./: .gitignore  Makefile.am  README  bootstrap  configure.ac
cmdline/: Makefile.am
ipc/: Makefile.am  ipc.c  ipc.h
marshal/: Makefile.am  marshal.c  marshal.h
network/: Makefile.am  net_interfaces.c  net_interfaces.h  network.c  network.h
src/: Makefile.am  main.c
